# slowpoke

./: Japan_b_value_summary.csv  README.md  b_value_summary_NZ.csv  environment.yml  setup.cfg  setup.py
data/: Alaska_EQ_all.csv  Cascadia_EQ_all.csv  Japan_SSE.csv  SSE_full_cat_pref_firstevent.csv  SSE_full_cat_pref_largest.csv  cat_sse_plusTranch.csv  correlation_sse_trench.ipynb  fast_catalogue_CH_alldepths  fast_catalogue_MX_alldepths  submap_MCRC.csv  submap_NPA.csv  trench_data.csv  trench_point_distance.ipynb
data/FastEarthquakes/: fast_catalogue_CH_alldepths
data/FastEarthquakes/depth_150km/: alaska.csv  cascadia.csv  chile.csv  japan.csv  japan_filtered.csv  mexico.csv
data/FastEarthquakes/depth_70km/: alaska.csv  cascadia.csv  chile.csv  japan.csv  japan_filtered.csv  mexico.csv
data/FastEarthquakes/depth_full/: alaska.csv  cascadia.csv  chile.csv  japan.csv  japan_filtered.csv  mexico.csv
data/Slab2/: README.md
data/Slab2/csv/: alu_slab2_-180_180.csv  cam_slab2_-180_180.csv  cas_slab2_-180_180.csv  izu_slab2_-180_180.csv  ker_slab2_-180_180.csv  kur_slab2_-180_180.csv  ryu_slab2_-180_180.csv  sum_slab2_-180_180.csv
data/Slab2/geotiff/: cam_depth.tif  cas_depth.tif  izu_depth.tif  ker_depth.tif  kur_depth.tif  ryu_depth.tif
data/Slab2/shp/: alu.shx  cas.shx  izu.shp  izu.shx  ker.shp  ker.shx  kur.shp  kur.shx  ryu.shx  sam.shp  sum.shx
data/Slab2/shp_0_360/: alu.dbf  (+10 more)
data/seismicity_slow_events_periods_newz/: 11_2004.csv  12_2007.csv  12_2010.csv  7_2006.csv  8_2008.csv
slow_py/: catalogs.py  data_maps.py  rasters.py  rates.py  slab.py
