[metadata]
name = slowpoke
description = Slow slip event analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = Tono Bayona,  Shaked Engelberg, Pablo Iturrieta, Francesco Serafini, Zibi Wilczynski
author_email = pciturri@gfz-potsdam.de
version = attr: setuptools_scm.get_version
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/pabloitu/slowpoke.git

[options]
packages =
    slow_py

install_requires =
   numpy
   matplotlib
   scipy
   pyvista
python_requires = >=3.9,<3.12
zip_safe = no

[options.packages.find]
include = slow_py*

[flake8]
max-line-length = 96